# FastAPI

./: README.md  main.py  pyproject.toml  run.sh
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: cart.py  products.py  purchase.py  qr.py  scan.py  stock.py
app/api/v2/: router.py
app/api/v2/endpoints/: products.py  speech.py
app/core/: config.py
app/crud/: order.py  product.py
app/db/: init_db.py  session.py
app/models/: __init__.py  order.py  product.py
app/schemas/: cart.py  order.py  product.py  scan.py
app/services/: cart_queue.py  order_service.py  ros2_service.py
scripts/: init_db.py  seed_db.py
