[project]
name = "robotics-abc-dashboard"
version = "0.0.1"
description = "A web dashboard for the Robotics ABC project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
]

[tool.uv.workspace]
members = [
    "venv",
]
